2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Workaround for kernel "every(1)emit;" bug.
	* src/liburbi/uobject.cc: Here.

2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Fig critical bug in USyncClient.
	* src/liburbi/usyncclient.cc: Don't go into synchronous callback
	  handling if tag is empty.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	Remove useless function.
	* src/liburbi/uobject/uvalue-common.cc (unescape): Remove the useless
	one.
	Tidy the file a bit.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	check-%.
	* Makefile.am (check-%, check-buildfarm): New.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	1.6pre.
	* configure.ac: here.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Fix uvalue_cast.
	* src/liburbi/uobject/urbi/uvalue.hh: The uvalue_cast needs its
	parameter without reference too.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Simplify reference stripping.
	Remove the refs at definition site, instead of use site.
	* src/liburbi/uobject/urbi/uvalue.hh: Use libport::unref_traits.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template: Simplify.
	(utrait): Remove.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	uvalue_cast<Type>(uvalue).
	* src/liburbi/uobject/urbi/ucallbacks.hh.template (urbi_cast): Rename as...
	(uvalue_caster): this.
	(uvar_ref_traits): New.
	(uvalue_cast): New.
	Use it.
	And move them all into...
	* src/liburbi/uobject/urbi/uvalue.hh: here.
	* src/liburbi/uobject/uvalue-common.cc: Adjust.

	* src/liburbi/uobject/utypes-common: Split into...
	* uobject/urbi/uproperty.hh, uobject/urbi/ublend-type.hh: these.
	Simplify the dependencies.

	* src/liburbi/uobject/uvalue-common.cc (UVar::operator=): Move to...
	* src/liburbi/uobject/uvar-common.cc: here.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	UValue cast: use a templated syntax.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template,
	* src/liburbi/uobject/uvalue-common.cc (cast): Remove.
	(urbi_cast, URBI_cast): New.
	Use them.
