@@ -1,0 +1,6 @@
+INSTALL
+Makefile.in
+aclocal.m4
+autom4te.cache
+configure
+src/liburbi/uobject/urbi/ucallbacks.hh
