@@ -1,0 +1,6 @@
+[submodule "libport"]
+	path = libport
+	url = git@core.gostai.com:libport.git
+[submodule "jpeg-6b"]
+	path = jpeg-6b
+	url = git@core.gostai.com:libjpeg-6b
