@@ -1,2 +1,2 @@
 #! /bin/sh
-exec build-aux/bootstrap "$@"
+exec libport/build-aux/bootstrap "$@"
