@@ -6,7 +6,7 @@ AC_INIT([URBI SDK], [1.6pre], [liburbi-cpp-bugs@gostai.com], [urbi-sdk])
 URBI_PACKAGE_COPYRIGHT([Gostai SAS], [2004-2007])
 
 # Auxiliary files.
-AC_CONFIG_AUX_DIR([build-aux])
+AC_CONFIG_AUX_DIR([libport/build-aux])
 URBI_BUILD_AUX
 
 # Automake.
@@ -30,7 +30,7 @@ URBI_PTHREAD
 URBI_LIBPORT
 # liburbi-c++ is also in charge of Libport's test suite.
 AC_CONFIG_FILES([libport/tests/Makefile])
-AC_CONFIG_FILES([build-aux/test.sh], [chmod a=rx build-aux/test.sh])
+AC_CONFIG_FILES([libport/build-aux/test.sh], [chmod a=rx libport/build-aux/test.sh])
 
 AC_PROG_CC
 URBI_PROG_CXX
