@@ -1,1 +1,1 @@
-include $(top_srcdir)/build-aux/doxygen.mk
+include $(top_srcdir)/libport/build-aux/doxygen.mk
